Login form using ajax.

--- a/public/registration.css
+++ b/public/registration.css
@@ -9,10 +9,10 @@ body {
     margin: auto;
     width: 50%;
     padding: 10px;
-    background-image: url("https://s4.postimg.org/5f7rtd9wb/shopping-malls-day-and-night-3d-model-max.jpg");
+    /*background-image: url("https://s4.postimg.org/5f7rtd9wb/shopping-malls-day-and-night-3d-model-max.jpg");*/
     background-repeat: no-repeat;
     background-size: 100%;
-    background-color: #000000;
+    /*background-color: #000000;*/
 }
 
 .button {
