--- a/public/contactus.css
+++ b/public/contactus.css
@@ -8,3 +8,9 @@ body {
     /*background-size: 100%;*/
     /*background-color: #000000;*/
 }
+
+#map {
+    width: 100%;
+    height: 400px;
+    background-color: grey;
+}
