--- a/public/css/cars_add.css
+++ b/public/css/cars_add.css
@@ -1,5 +1,5 @@
 body {
-    text-align: justify;
+    text-align: center;
     margin: auto;
     width: 50%;
     padding: 10px;
@@ -7,4 +7,8 @@ body {
     /*background-repeat: no-repeat;*/
     /*background-size: 100%;*/
     /*background-color: #000000;*/
+}
+
+.selectContainer {
+    margin-bottom: 15px;
 }
