--- a/public/css/cars_add.css
+++ b/public/css/cars_add.css
@@ -9,6 +9,20 @@ body {
     /*background-color: #000000;*/
 }
 
+#price {
+    width: 21%;
+    margin-left: 15px;
+}
+
+.container {
+    max-width: 80%;
+}
+
 .selectContainer {
     margin-bottom: 15px;
+}
+
+.not-empty {
+    margin-bottom: 15px;
+    color: #fe0000;
 }
